[package]
name = "localns"
description = "Serves DNS records for all of your local services."
version = "1.0.2"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
documentation = "https://localns.readthedocs.io/en/latest/"
repository = "https://github.com/Mossop/localns"
homepage = "https://github.com/Mossop/localns"
license = "MIT"
edition = "2021"
default-run = "localns"

[dependencies]
bollard = { version = "^0.17.1", features = ["ssl"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = "^1.0.216"
serde_yaml = "^0.9.34"
futures = "^0.3.31"
reqwest = { version = "^0.12.9", default-features = false, features = [
  "json",
  "rustls-tls",
] }
notify = "^7.0.0"
hickory-server = "^0.24.1"
hickory-client = "^0.24.1"
async-trait = "^0.1.83"
actix-web = "^4.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v4"] }
serde_plain = "1.0.2"
anyhow = { version = "1.0.94", features = ["backtrace"] }

[dev-dependencies]
tempfile = "^3.14.0"
testcontainers = { version = "^0.23.1", features = ["http_wait"] }
tracing-test = "^0.2.5"
nix = { version = "0.29.0", features = ["signal"] }
