[package]
name = "localns"
description = "Serves DNS records for all of your local services."
version = "2.0.0"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
documentation = "https://localns.readthedocs.io/en/latest/"
repository = "https://github.com/Mossop/localns"
homepage = "https://github.com/Mossop/localns"
license = "MIT"
edition = "2021"
default-run = "localns"

[dependencies]
bollard = { version = "^0.17.1", features = ["ssl"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = "^1.0.217"
serde_yaml = "^0.9.34"
futures = "^0.3.31"
reqwest = { version = "^0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
hickory-server = "^0.24.2"
hickory-client = "^0.24.2"
async-trait = "^0.1.85"
actix-web = "^4.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.26", features = ["derive"] }
figment = { version = "0.10.19", features = ["yaml", "env"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
serde_plain = "1.0.2"
anyhow = { version = "1.0.95", features = ["backtrace"] }
sha2 = "0.10.8"
tracing-opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = [
  "http-proto",
  "reqwest-client",
] }
opentelemetry = "0.27.1"

[dev-dependencies]
tempfile = "^3.15.0"
testcontainers = { version = "^0.23.1", features = ["http_wait"] }
tracing-test = "^0.2.5"
nix = { version = "0.29.0", features = ["signal"] }
